Removed extra arguments for browser creation.