@@ -6,16 +6,15 @@ import com.microsoft.playwright.BrowserType;
 import com.microsoft.playwright.Playwright;
 import io.swaglabs.portal.qa.constants.WebPortalConstants;
 
-import java.util.List;
+import java.util.Collections;
 
 public class ChromeBrowser implements IBrowser {
 
     @Override
     public BrowserContext createSession(Playwright playwright, boolean isHeadless) {
         return playwright.chromium().launch(new BrowserType.LaunchOptions()
-                .setHeadless(isHeadless)
-                .setArgs(isHeadless
-                        ? List.of(WebPortalConstants.NEW_HEADLESS, WebPortalConstants.MAXIMIZE_WINDOW)
-                        : List.of(WebPortalConstants.MAXIMIZE_WINDOW))).newContext(new Browser.NewContextOptions().setViewportSize(null));
+                        .setHeadless(isHeadless)
+                        .setArgs(Collections.singletonList(WebPortalConstants.MAXIMIZE_WINDOW)))
+                .newContext(new Browser.NewContextOptions().setViewportSize(null));
     }
 }
