@@ -6,14 +6,14 @@ import com.microsoft.playwright.BrowserType;
 import com.microsoft.playwright.Playwright;
 import io.swaglabs.portal.qa.constants.WebPortalConstants;
 
-import java.util.List;
+import java.util.Collections;
 
 public class FirefoxBrowser implements IBrowser {
     @Override
     public BrowserContext createSession(Playwright playwright, boolean isHeadless) {
         return playwright.firefox().launch(new BrowserType.LaunchOptions()
                         .setHeadless(isHeadless)
-                        .setArgs(List.of(WebPortalConstants.MAXIMIZE_WINDOW)))
+                        .setArgs(Collections.singletonList(WebPortalConstants.MAXIMIZE_WINDOW)))
                 .newContext(new Browser.NewContextOptions().setViewportSize(null));
     }
 }
